<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/ibClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close_image_button"
        android:src="@drawable/ic_close"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvQuestionWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Galaxy"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:singleLine="true"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibClose"
        tools:text="Galaxy"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/layoutVariants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionWord"
        app:layout_constraintVertical_bias="0.6">

        <LinearLayout
            android:id="@+id/layoutAnswer1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariantNumber1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/textVariantsColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvVariantValue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Сломать"
                style="@style/TextViewVariantsStyle"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariantNumber2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/textVariantsColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvVariantValue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Сон"
                style="@style/TextViewVariantsStyle"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariantNumber3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="3"
                android:textColor="@color/textVariantsColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvVariantValue3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Галактика"
                style="@style/TextViewVariantsStyle"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariantNumber4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="4"
                android:textColor="@color/textVariantsColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvVariantValue4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Утюг"
                style="@style/TextViewVariantsStyle"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btnSkip"
        style="@style/TextButtonStyle"
        android:layout_width="310dp"
        android:layout_height="58dp"
        android:background="@drawable/shape_button_footer"
        android:backgroundTint="@color/buttonBlueColor"
        android:text="@string/button_skip"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginBottom="24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/correctAnswerColor"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/ivResultIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/correct_answer_icon"
            android:src="@drawable/ic_correct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvResultMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_correct"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivResultIcon"
            app:layout_constraintStart_toEndOf="@+id/ivResultIcon"
            app:layout_constraintTop_toTopOf="@+id/ivResultIcon" />

        <android.widget.Button
            android:id="@+id/btnContinue"
            android:layout_width="310dp"
            android:layout_height="58dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/correctAnswerColor"
            android:backgroundTint="@color/white"
            android:background="@drawable/shape_button_footer"
            android:text="@string/button_continue"
            android:fontFamily="@font/nunito_bold"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivResultIcon" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
